# automl-helpers

./: .gitignore  README.md  requirements.txt  setup.cfg
src/automl/: __init__.py  automl.py  automl_utils.py  dltabular_tf.py
src/automl/aggregation/: Aggregation_Method.csv  Aggregation_Test.csv  aggregation.py
src/automl/pipelines/: pipelines.py
src/automl_helpers.egg-info/: SOURCES.txt
tests/: .gitignore  DL_Pipeline.ipynb  Sample_Competition.ipynb  Sample_Pipeline_XGBoost_Prod.ipynb  Sample_Pipeline_XGBoost_Train.ipynb  Sample_Pipeline_v2_Prod.ipynb  Sample_Pipeline_v2_Train.ipynb  Sample_Prediction.ipynb  feature_types.csv
