[metadata]
name = automl-helpers
version = 0.0.2
author = Example Author
author_email = author@example.com
description = A small package to help with modeling pipelines
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/markovian99/automl-helpers
project_urls =
    Bug Tracker = https://github.com/markovian99/automl-helpers/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .\src
python_requires = >=3.6

[options.packages.find]
where = src